--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
                         <h3>我还有一个特别的爱好是打拳💪🏿💪🏿</h3>
                      <a href="https://www.bilibili.com/"> 这是我常用的网站</a>
             <hr>
-            <a href="C:\Users\86155\Desktop\网页设计\DRose.html">这是我的偶像之一</a> </body>
+            <a href="DRose.html">这是我的偶像之一</a> </body>
 
 </html>
